refactored and reformated html files

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -33,104 +33,123 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
-    <p class="lead">Keep track of how many ribbons you have and which ones you need in each game.</p>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Pokemon Ribbon Tracker</h1>
+      <p class="lead">Keep track of how many ribbons you have and which ones you need in each game.</p>
 
-    <!-- ======= Game Section ======= -->
-    <section id="Games" class="Games">
+      <!-- ======= Game Section ======= -->
+      <section id="Games" class="Games">
 
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_xd_colosseum.html"><img src="assets/images/pokemon_xd&Colosseum_logos.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon XD Gale of Darkness & Colosseum logos"></a></img>
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_xd_colosseum.html"><img src="assets/images/pokemon_xd&Colosseum_logos.png"
+                    class="box-img img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon XD Gale of Darkness & Colosseum logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_rse.html"><img src="assets/images/pokemon_rse_logo.png"
+                    class="box-img img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon Ruby Sapphire & Emerald logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_dppt.html"><img src="assets/images/pokemon_dppt_logo.png"
+                    class="box-img img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon Diamond Pearl & Platinum logos"></a></img>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_rse.html"><img src="assets/images/pokemon_rse_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Ruby Sapphire & Emerald logos"></a></img>
+          <div class="row">
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png"
+                    class="box-img2 img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_xy.html"><img src="assets/images/pokemon_xy_logo.png"
+                    class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Pokemon X & Y logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_oras.html"><img src="assets/images/pokemon_oras_logo.png"
+                    class="box-img img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon Omega Ruby & Alpha Sapphire logos"></a></img>
+              </div>
             </div>
           </div>
 
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_dppt.html"><img src="assets/images/pokemon_dppt_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Diamond Pearl & Platinum logos"></a></img>
+          <div class="row">
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png"
+                    class="box-img2 img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_swsh.html"><img src="assets/images/pokemon_swsh_logo.png"
+                    class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Sword & Shield logos"></a></img>
+              </div>
+            </div>
+
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_bdsp.html"><img src="assets/images/pokemon_bdsp_logo.png"
+                    class="box-img img-fluid mx-auto d-block"
+                    alt="Picture of Pokemon Brilliant Diamond & Shinning Pearl logos"></a></img>
+              </div>
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col-lg-4 mb-4 mb-lg-4">
+            </div>
+            <div class="col-lg-4 mb-4 mb-lg-4">
+              <div class="icon-box">
+                <a href="pkmn_sv.html"><img src="assets/images/pokemon_sv_logo.jpg"
+                    class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Scarlet & Violet logos"></a></img>
+              </div>
+            </div>
+            <div class="col-lg-4 mb-4 mb-lg-4">
             </div>
           </div>
         </div>
+      </section>
+    </main><!-- End of main -->
 
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_hgss.html"><img src="assets/images/pokemon_hgss_logo.png" class="box-img2 img-fluid mx-auto d-block" alt="Picture of Pokemon HeartGold & SoulSilver logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_xy.html"><img src="assets/images/pokemon_xy_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Pokemon X & Y logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_oras.html"><img src="assets/images/pokemon_oras_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Omega Ruby & Alpha Sapphire logos"></a></img>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_usum.html"><img src="assets/images/pokemon_usum_logo.png" class="box-img2 img-fluid mx-auto d-block" alt="Picture of Pokemon Ultra Sun & Ultra Moon logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_swsh.html"><img src="assets/images/pokemon_swsh_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Sword & Shield logos"></a></img>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_bdsp.html"><img src="assets/images/pokemon_bdsp_logo.png" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Brilliant Diamond & Shinning Pearl logos"></a></img>
-            </div>
-          </div>
-        </div>
-        
-        <div class="row">
-          <div class="col-lg-4 mb-4 mb-lg-4">
-          </div>
-          <div class="col-lg-4 mb-4 mb-lg-4">
-            <div class="icon-box">
-              <a href="pkmn_sv.html"><img src="assets/images/pokemon_sv_logo.jpg" class="box-img img-fluid mx-auto d-block" alt="Picture of Pokemon Scarlet & Violet logos"></a></img>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-4 mb-lg-4">
-          </div>
-        </div>
+    <!-- ======= Footer ======= -->
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
       </div>
-    </section>
-  </main><!-- End of main -->
+    </footer>
 
-  <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
-
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</div>
+  </div>
 </body>
+
 </html>
