--- a/pkmn_hgss.html
+++ b/pkmn_hgss.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -33,131 +33,131 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Pokemon HeartGold & SoulSilver</h1>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Pokemon HeartGold & SoulSilver</h1>
 
-    <section>
-      <div class="container">
+      <section>
+        <div class="container">
 
-        <table class="table table-dark table-bordered table-responsive-md">
-          <thead>
-            <tr>
-              <th>Number</th>
-              <th>Ribbon</th>
-              <th>How to get</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck48" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck48">48</label>
-                </div>
-              </td>
-              <td>Ability Ribbon</td>
-              <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck48" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck48">48</label>
+                  </div>
+                </td>
+                <td>Ability Ribbon</td>
+                <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck49" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck49">49</label>
-                </div>
-              </td>
-              <td>Great Ability Ribbon</td>
-              <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck49" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck49">49</label>
+                  </div>
+                </td>
+                <td>Great Ability Ribbon</td>
+                <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck50" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck50">50</label>
-                </div>
-              </td>
-              <td>Double Ability Ribbon</td>
-              <td>Win 50 consecutive battles in Battle Tower Doubles
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck50" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck50">50</label>
+                  </div>
+                </td>
+                <td>Double Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Doubles
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck51" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck51">51</label>
-                </div>
-              </td>
-              <td>Multi Ability Ribbon</td>
-              <td>Win 50 consecutive battles in Battle Tower Multi.
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck51" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck51">51</label>
+                  </div>
+                </td>
+                <td>Multi Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Multi.
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck52" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck52">52</label>
-                </div>
-              </td>
-              <td>Pair Ability Ribbon</td>
-              <td>Win 50 consecutive battles in Battle Tower Link Multi.
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck52" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck52">52</label>
+                  </div>
+                </td>
+                <td>Pair Ability Ribbon</td>
+                <td>Win 50 consecutive battles in Battle Tower Link Multi.
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck53" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck53">53</label>
-                </div>
-              </td>
-              <td>World Ability Ribbon</td>
-              <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck53" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck53">53</label>
+                  </div>
+                </td>
+                <td>World Ability Ribbon</td>
+                <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
                   **Note: Can also be done in DPPt
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck54" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck54">54</label>
-                </div>
-              </td>
-              <td>Legend Ribbon</td>
-              <td>Defeat Red</td>
-            </tr>
-          </tbody>
-        </table>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck54" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck54">54</label>
+                  </div>
+                </td>
+                <td>Legend Ribbon</td>
+                <td>Defeat Red</td>
+              </tr>
+            </tbody>
+          </table>
 
-        <p>This item below is not required but is recommended to get.</p>
+          <p>This item below is not required but is recommended to get.</p>
 
-        <table class="table table-dark table-bordered table-responsive-md">
-          <thead>
-            <tr>
-              <th>Number</th>
-              <th>Ribbon</th>
-              <th>How to get</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck000" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck000"></label>
-                </div>
-              </td>
-              <td>Shiny Crown</td>
-              <td>Talk to Ethan/Lyra after getting 5 Shiny Leaves on the mon</td>
-            </tr>
-          </tbody>
-        </table>
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck000" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck000"></label>
+                  </div>
+                </td>
+                <td>Shiny Crown</td>
+                <td>Talk to Ethan/Lyra after getting 5 Shiny Leaves on the mon</td>
+              </tr>
+            </tbody>
+          </table>
 
-        <p>The ribbons below can be acquired in multiple gens</p>
+          <p>The ribbons below can be acquired in multiple gens</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -177,7 +177,7 @@
                 </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs in Blackthorn City
-                    **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
+                  **Note: Can also be done in RSE, DPPt, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -189,7 +189,7 @@
                 </td>
                 <td>Alert Ribbon</td>
                 <td>Show mon on Monday at Route 40
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -201,7 +201,7 @@
                 </td>
                 <td>Shock Ribbon</td>
                 <td>Show mon on Tuesday at Route 29
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -213,7 +213,7 @@
                 </td>
                 <td>Downcast Ribbon</td>
                 <td>Show mon on Wednesday at Lake of Rage
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -225,7 +225,7 @@
                 </td>
                 <td>Careless Ribbon</td>
                 <td>Show mon on Thursday in Route 36
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -237,7 +237,7 @@
                 </td>
                 <td>Relax Ribbon</td>
                 <td>Show mon on Friday in Route 32
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -249,7 +249,7 @@
                 </td>
                 <td>Snooze Ribbon</td>
                 <td>Show mon on Saturday in Blackthorn City
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -261,66 +261,69 @@
                 </td>
                 <td>Smile Ribbon</td>
                 <td>Show mon on Sunday at Route 37
-                    **Note: Can also be done in DPPt, XY, ORAS & BDSP
+                  **Note: Can also be done in DPPt, XY, ORAS & BDSP
                 </td>
               </tr>
             </tbody>
           </table>
-        
-        <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
-      </div>
-    </section>
 
-    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
-       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+        </div>
+      </section>
 
-  </main><!-- End of main -->
+      <p>Big thanks to <a
+          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
+          target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File 
+    <!-- Main JS File 
   <script src="assets/js/main.js"></script>-->
 
-  <script>
-    $('.custom-control-input').on('click', function() {
-      var fav, favs = [];
-      $('.custom-control-input').each(function() { // run through each of the checkboxes
-        fav = {id: $(this).attr('id'), value: $(this).prop('checked')};
-        favs.push(fav);
+    <script>
+      $('.custom-control-input').on('click', function () {
+        var fav, favs = [];
+        $('.custom-control-input').each(function () { // run through each of the checkboxes
+          fav = { id: $(this).attr('id'), value: $(this).prop('checked') };
+          favs.push(fav);
+        });
+        localStorage.setItem("ribbonListHGSS", JSON.stringify(favs));
+
+        console.log(favs);
       });
-      localStorage.setItem("ribbonListHGSS", JSON.stringify(favs));
 
-      console.log(favs);
-    });
+      // Parses through the created json file and reasigns values to the checkboxes
+      $(document).ready(function () {
+        var list = JSON.parse(localStorage.getItem('ribbonListHGSS'));
+        if (!list.length) { return };
+        console.debug(list);
 
-    // Parses through the created json file and reasigns values to the checkboxes
-    $(document).ready(function() {
-      var list = JSON.parse(localStorage.getItem('ribbonListHGSS'));
-      if (!list.length) {return};
-      console.debug(list);
+        for (var i = 0; i < list.length; i++) {
+          console.debug(list[i].value == 'on');
+          $('#' + list[i].id).prop('checked', list[i].value);
+        }
+      });
 
-      for (var i = 0; i < list.length; i++) {
-        console.debug(list[i].value == 'on');
-        $('#' + list[i].id ).prop('checked', list[i].value);
+      function clearAll() {
+        location.reload();
+        localStorage.removeItem('ribbonListHGSS');
       }
-    });
+    </script>
 
-    function clearAll() {
-      location.reload();
-      localStorage.removeItem('ribbonListHGSS');
-    }
-  </script>
-
-</div>
+  </div>
 </body>
+
 </html>
