--- a/pkmn_oras.html
+++ b/pkmn_oras.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -33,127 +33,129 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Pokemon Omega Ruby & Alpha Sapphire</h1>
-  
-    <section>
-      <div class="container">
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Pokemon Omega Ruby & Alpha Sapphire</h1>
 
-        <table class="table table-dark table-bordered table-responsive-md">
-          <thead>
-            <tr>
-              <th>Number</th>
-              <th>Ribbon</th>
-              <th>How to get</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck56">56</label>
-                </div>
-              </td>
-              <td>Training Ribbon</td>
-              <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center 
+      <section>
+        <div class="container">
+
+          <table class="table table-dark table-bordered table-responsive-md">
+            <thead>
+              <tr>
+                <th>Number</th>
+                <th>Ribbon</th>
+                <th>How to get</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck56" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck56">56</label>
+                  </div>
+                </td>
+                <td>Training Ribbon</td>
+                <td>Show a woman in Cafe Ultimo in Luminose City (XY) or the black belt in front of the Pokemon Center
                   in Dewford Town (ORAS) a Supremely Trained Pokemon. **Note: Can also be done in X & Y</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck57">57</label>
-                </div>
-              </td>
-              <td>Skillful Battler Ribbon</td>
-              <td>Defeat a Battle Chatelaine **Note: Can also be done in X & Y
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck58">58</label>
-                </div>
-              </td>
-              <td>Expert Battler Ribbon</td>
-              <td>Defeat a Battle Chatelaine in a Super Battle
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck57" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck57">57</label>
+                  </div>
+                </td>
+                <td>Skillful Battler Ribbon</td>
+                <td>Defeat a Battle Chatelaine **Note: Can also be done in X & Y
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck58" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck58">58</label>
+                  </div>
+                </td>
+                <td>Expert Battler Ribbon</td>
+                <td>Defeat a Battle Chatelaine in a Super Battle
                   **Note: Can also be done in X & Y
-              </td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck59" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck59">59</label>
-                </div>
-              </td>
-              <td>Hoenn Champion Ribbon</td>
-              <td>Defeat the Hoenn Elite 4</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck60">60</label>
-                </div>
-              </td>
-              <td>Coolness Master Ribbon</td>
-              <td>Win Cool Contest Spectacular Master Rank</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck61">61</label>
-                </div>
-              </td>
-              <td>Beauty Master Ribbon</td>
-              <td>Win Beauty Contest Spectacular Master Rank</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck62">62</label>
-                </div>
-              </td>
-              <td>Cuteness Master Ribbon</td>
-              <td>Win Cuteness Contest Spectacular Master Rank</td>
-            </tr>
-            <tr>
-              <td><div class="custom-control custom-checkbox">
-                <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
-                <label class="custom-control-label" for="tableDefaultCheck63">63</label>
-              </div></td>
-              <td>Cleverness Master Ribbon</td>
-              <td>Win Cleverness Contest Spectacular Master Rank</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck64">64</label>
-                </div>
-              </td>
-              <td>Toughness Ribbon</td>
-              <td>Win Toughness Contest Spectacular Master Rank</td>
-            </tr>
-            <tr>
-              <td>
-                <div class="custom-control custom-checkbox">
-                  <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
-                  <label class="custom-control-label" for="tableDefaultCheck65">65</label>
-                </div>
-              </td>
-              <td>Contest Star Ribbon</td>
-              <td>Win in all five Master Rank categories</td>
-            </tr>
-          </tbody>
-        </table>
+                </td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck59" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck59">59</label>
+                  </div>
+                </td>
+                <td>Hoenn Champion Ribbon</td>
+                <td>Defeat the Hoenn Elite 4</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck60" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck60">60</label>
+                  </div>
+                </td>
+                <td>Coolness Master Ribbon</td>
+                <td>Win Cool Contest Spectacular Master Rank</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck61" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck61">61</label>
+                  </div>
+                </td>
+                <td>Beauty Master Ribbon</td>
+                <td>Win Beauty Contest Spectacular Master Rank</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck62" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck62">62</label>
+                  </div>
+                </td>
+                <td>Cuteness Master Ribbon</td>
+                <td>Win Cuteness Contest Spectacular Master Rank</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck63" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck63">63</label>
+                  </div>
+                </td>
+                <td>Cleverness Master Ribbon</td>
+                <td>Win Cleverness Contest Spectacular Master Rank</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck64" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck64">64</label>
+                  </div>
+                </td>
+                <td>Toughness Ribbon</td>
+                <td>Win Toughness Contest Spectacular Master Rank</td>
+              </tr>
+              <tr>
+                <td>
+                  <div class="custom-control custom-checkbox">
+                    <input type="checkbox" class="custom-control-input" id="tableDefaultCheck65" name="ribbon">
+                    <label class="custom-control-label" for="tableDefaultCheck65">65</label>
+                  </div>
+                </td>
+                <td>Contest Star Ribbon</td>
+                <td>Win in all five Master Rank categories</td>
+              </tr>
+            </tbody>
+          </table>
 
-        <p>The ribbons below can be acquired in multiple gens</p>
+          <p>The ribbons below can be acquired in multiple gens</p>
 
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
@@ -173,7 +175,7 @@
                 </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Slateport Market
-                    **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
+                  **Note: Can also be done in RSE, DPPt, HGSS, XY, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -185,7 +187,7 @@
                 </td>
                 <td>Alert Ribbon</td>
                 <td>Show mon on Monday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -197,7 +199,7 @@
                 </td>
                 <td>Shock Ribbon</td>
                 <td>Show mon on Tuesday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -209,7 +211,7 @@
                 </td>
                 <td>Downcast Ribbon</td>
                 <td>Show mon on Wednesday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -221,7 +223,7 @@
                 </td>
                 <td>Careless Ribbon</td>
                 <td>Show mon on Thursday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -233,7 +235,7 @@
                 </td>
                 <td>Relax Ribbon</td>
                 <td>Show mon on Friday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -245,7 +247,7 @@
                 </td>
                 <td>Snooze Ribbon</td>
                 <td>Show mon on Saturday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -257,7 +259,7 @@
                 </td>
                 <td>Smile Ribbon</td>
                 <td>Show mon on Sunday in Mauville Hills
-                    **Note: Can also be done in DPPt, HGSS, XY & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY & BDSP
                 </td>
               </tr>
               <tr>
@@ -269,7 +271,7 @@
                 </td>
                 <td>Gorgeous Ribbon</td>
                 <td>Buy for 10,000 pokemonies in Mauville City
-                    **Note: Can also be done in DPPt & BDSP
+                  **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -281,7 +283,7 @@
                 </td>
                 <td>Royal Ribbon</td>
                 <td>Buy for 100,000 pokemonies in Mauville City
-                    **Note: Can also be done in DPPt & BDSP
+                  **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -293,7 +295,7 @@
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
                 <td>Buy for 999,999 pokemonies in Mauville City
-                    **Note: Can also be done in DPPt & BDSP
+                  **Note: Can also be done in DPPt & BDSP
                 </td>
               </tr>
               <tr>
@@ -317,66 +319,69 @@
                 </td>
                 <td>Best Friends Ribbon</td>
                 <td>Show mon with max affection in Mauville Hills
-                    **Note: Can also be done in XY, USUM, SwSh & BDSP
+                  **Note: Can also be done in XY, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
           </table>
-          
-          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
-      </div>
-    </section>
 
-    <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
-       target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
-  
-  </main><!-- End of main -->
+          <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
+        </div>
+      </section>
+
+      <p>Big thanks to <a
+          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
+          target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File 
+    <!-- Main JS File 
   <script src="assets/js/main.js"></script>-->
 
-  <script>
-    $('.custom-control-input').on('click', function() {
-      var fav, favs = [];
-      $('.custom-control-input').each(function() { // run through each of the checkboxes
-        fav = {id: $(this).attr('id'), value: $(this).prop('checked')};
-        favs.push(fav);
+    <script>
+      $('.custom-control-input').on('click', function () {
+        var fav, favs = [];
+        $('.custom-control-input').each(function () { // run through each of the checkboxes
+          fav = { id: $(this).attr('id'), value: $(this).prop('checked') };
+          favs.push(fav);
+        });
+        localStorage.setItem("ribbonListORAS", JSON.stringify(favs));
+
+        console.log(favs);
       });
-      localStorage.setItem("ribbonListORAS", JSON.stringify(favs));
 
-      console.log(favs);
-    });
+      // Parses through the created json file and reasigns values to the checkboxes
+      $(document).ready(function () {
+        var list = JSON.parse(localStorage.getItem('ribbonListORAS'));
+        if (!list.length) { return };
+        console.debug(list);
 
-    // Parses through the created json file and reasigns values to the checkboxes
-    $(document).ready(function() {
-      var list = JSON.parse(localStorage.getItem('ribbonListORAS'));
-      if (!list.length) {return};
-      console.debug(list);
+        for (var i = 0; i < list.length; i++) {
+          console.debug(list[i].value == 'on');
+          $('#' + list[i].id).prop('checked', list[i].value);
+        }
+      });
 
-      for (var i = 0; i < list.length; i++) {
-        console.debug(list[i].value == 'on');
-        $('#' + list[i].id ).prop('checked', list[i].value);
+      function clearAll() {
+        location.reload();
+        localStorage.removeItem('ribbonListORAS');
       }
-    });
+    </script>
 
-    function clearAll() {
-      location.reload();
-      localStorage.removeItem('ribbonListORAS');
-    }
-  </script>
-
-</div>
+  </div>
 </body>
+
 </html>
