--- a/credits.html
+++ b/credits.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -30,35 +30,39 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Credits</h1>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Credits</h1>
 
-    <br>
-    <p>This website was created and is maintained by <a href="https://evanmccarthy.vercel.app/">Evan McCarthy</a>.</p>
-    <br>
-    
-    <h2>Sources:</h2>
-    <p><a href="https://serebii.net/">Serebii.net</a></p>
-    <p><a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/">u/CaptainTimey's Reddit post on r/pokemonribbons</a></p>
-    <p><a href="https://bulbapedia.bulbagarden.net/wiki/Mark">Bulbapedia</a></p>
+      <br>
+      <p>This website was created and is maintained by <a href="https://evanmccarthy.vercel.app/">Evan McCarthy</a>.</p>
+      <br>
 
-  </main><!-- End of main -->
+      <h2>Sources:</h2>
+      <p><a href="https://serebii.net/">Serebii.net</a></p>
+      <p><a
+          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/">u/CaptainTimey's
+          Reddit post on r/pokemonribbons</a></p>
+      <p><a href="https://bulbapedia.bulbagarden.net/wiki/Mark">Bulbapedia</a></p>
+
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</div>
+  </div>
 </body>
+
 </html>
