--- a/pkmn_dppt.html
+++ b/pkmn_dppt.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -33,12 +33,12 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Pokemon Diamond Pearl & Platinum</h1>
-  
-    <section>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Pokemon Diamond Pearl & Platinum</h1>
+
+      <section>
         <div class="container">
-  
+
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
               <tr>
@@ -48,7 +48,7 @@
               </tr>
             </thead>
             <tbody>
-            <tr>
+              <tr>
                 <td>
                   <div class="custom-control custom-checkbox">
                     <input type="checkbox" class="custom-control-input" id="tableDefaultCheck27" name="ribbon">
@@ -267,7 +267,7 @@
                 </td>
                 <td>Ability Ribbon</td>
                 <td>Defeat Tower Tycoon Palmer the first time in Battle Tower Singles (21st battle)
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -279,7 +279,7 @@
                 </td>
                 <td>Great Ability Ribbon</td>
                 <td>Defeat Tower Tycoon Palmer the second time in Battle Tower Singles (49th battle)
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -291,7 +291,7 @@
                 </td>
                 <td>Double Ability Ribbon</td>
                 <td>Win 50 consecutive battles in Battle Tower Doubles
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -303,7 +303,7 @@
                 </td>
                 <td>Multi Ability Ribbon</td>
                 <td>Win 50 consecutive battles in Battle Tower Multi.
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -315,7 +315,7 @@
                 </td>
                 <td>Pair Ability Ribbon</td>
                 <td>Win 50 consecutive battles in Battle Tower Link Multi.
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
               <tr>
@@ -327,7 +327,7 @@
                 </td>
                 <td>World Ability Ribbon</td>
                 <td>Reach Rank 5 in the Wi-Fi Battle Tower challenge
-                    **Note: Can also be done in HGSS
+                  **Note: Can also be done in HGSS
                 </td>
               </tr>
             </tbody>
@@ -353,7 +353,7 @@
                 </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Sunnyshore Market
-                    **Note: Can also be done in RSE, HGSS, XY, ORAS, USUM, SwSh & BDSP
+                  **Note: Can also be done in RSE, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
               <tr>
@@ -365,7 +365,7 @@
                 </td>
                 <td>Alert Ribbon</td>
                 <td>Show mon on Monday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -377,7 +377,7 @@
                 </td>
                 <td>Shock Ribbon</td>
                 <td>Show mon on Tuesday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -389,7 +389,7 @@
                 </td>
                 <td>Downcast Ribbon</td>
                 <td>Show mon on Wednesday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -401,7 +401,7 @@
                 </td>
                 <td>Careless Ribbon</td>
                 <td>Show mon on Thursday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -413,7 +413,7 @@
                 </td>
                 <td>Relax Ribbon</td>
                 <td>Show mon on Friday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -425,7 +425,7 @@
                 </td>
                 <td>Snooze Ribbon</td>
                 <td>Show mon on Saturday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -437,7 +437,7 @@
                 </td>
                 <td>Smile Ribbon</td>
                 <td>Show mon on Sunday in Sunyshore City
-                    **Note: Can also be done in HGSS, XY, ORAS & BDSP
+                  **Note: Can also be done in HGSS, XY, ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -449,7 +449,7 @@
                 </td>
                 <td>Gorgeous Ribbon</td>
                 <td>Buy for 10,000 pokemonies at the Ribbon Syndicate; located in Resort Area
-                    **Note: Can also be done in ORAS & BDSP
+                  **Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -461,7 +461,7 @@
                 </td>
                 <td>Royal Ribbon</td>
                 <td>Buy for 100,000 pokemonies at the Ribbon Syndicate; located in the Resort Area
-                    **Note: Can also be done in ORAS & BDSP
+                  **Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -473,7 +473,7 @@
                 </td>
                 <td>Gorgeous Royal Ribbon</td>
                 <td>Buy for 999,999 pokemonies at the Ribbon Syndicate; located in the Resort Area
-                    **Note: Can also be done in ORAS & BDSP
+                  **Note: Can also be done in ORAS & BDSP
                 </td>
               </tr>
               <tr>
@@ -490,61 +490,64 @@
               </tr>
             </tbody>
           </table>
-          
+
           <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
         </div>
       </section>
-  
-      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
-         target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
+      <p>Big thanks to <a
+          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
+          target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
 
     </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File 
+    <!-- Main JS File 
   <script src="assets/js/main.js"></script>-->
 
-  <script>
-    $('.custom-control-input').on('click', function() {
-      var fav, favs = [];
-      $('.custom-control-input').each(function() { // run through each of the checkboxes
-        fav = {id: $(this).attr('id'), value: $(this).prop('checked')};
-        favs.push(fav);
+    <script>
+      $('.custom-control-input').on('click', function () {
+        var fav, favs = [];
+        $('.custom-control-input').each(function () { // run through each of the checkboxes
+          fav = { id: $(this).attr('id'), value: $(this).prop('checked') };
+          favs.push(fav);
+        });
+        localStorage.setItem("ribbonListDPPT", JSON.stringify(favs));
+
+        console.log(favs);
       });
-      localStorage.setItem("ribbonListDPPT", JSON.stringify(favs));
 
-      console.log(favs);
-    });
+      // Parses through the created json file and reasigns values to the checkboxes
+      $(document).ready(function () {
+        var list = JSON.parse(localStorage.getItem('ribbonListDPPT'));
+        if (!list.length) { return };
+        console.debug(list);
 
-    // Parses through the created json file and reasigns values to the checkboxes
-    $(document).ready(function() {
-      var list = JSON.parse(localStorage.getItem('ribbonListDPPT'));
-      if (!list.length) {return};
-      console.debug(list);
+        for (var i = 0; i < list.length; i++) {
+          console.debug(list[i].value == 'on');
+          $('#' + list[i].id).prop('checked', list[i].value);
+        }
+      });
 
-      for (var i = 0; i < list.length; i++) {
-        console.debug(list[i].value == 'on');
-        $('#' + list[i].id ).prop('checked', list[i].value);
+      function clearAll() {
+        location.reload();
+        localStorage.removeItem('ribbonListDPPT');
       }
-    });
+    </script>
 
-    function clearAll() {
-      location.reload();
-      localStorage.removeItem('ribbonListDPPT');
-    }
-  </script>
-
-</div>
+  </div>
 </body>
+
 </html>
