--- a/pkmn_rse.html
+++ b/pkmn_rse.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -35,10 +35,10 @@
 
     <main role="main" class="inner cover">
       <h1 class="cover-heading">Pokemon Ruby Sapphire & Emerald</h1>
-    
+
       <section>
         <div class="container">
-  
+
           <table class="table table-dark table-bordered table-responsive-md">
             <thead>
               <tr>
@@ -311,66 +311,69 @@
                 </td>
                 <td>Effort Ribbon</td>
                 <td>Show mon with 510 EVs at Slateport Market
-                    **Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
+                  **Note: Can also be done in DPPt, HGSS, XY, ORAS, USUM, SwSh & BDSP
                 </td>
               </tr>
             </tbody>
           </table>
-          
+
           <button type="button" value="delete" class="button" onclick="clearAll()">Clear</button>
         </div>
       </section>
-  
-      <p>Big thanks to <a href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/" 
-         target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
-  
+
+      <p>Big thanks to <a
+          href="https://www.reddit.com/r/pokemonribbons/comments/7j772r/a_quick_list_on_all_ribbons_a_pokemon_can_get/"
+          target="_blank">u/CaptainTimey</a> on Reddit for the help with the ribbons and their locations!</p>
+
     </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File 
+    <!-- Main JS File 
   <script src="assets/js/main.js"></script>-->
 
-  <script>
-    $('.custom-control-input').on('click', function() {
-      var fav, favs = [];
-      $('.custom-control-input').each(function() { // run through each of the checkboxes
-        fav = {id: $(this).attr('id'), value: $(this).prop('checked')};
-        favs.push(fav);
+    <script>
+      $('.custom-control-input').on('click', function () {
+        var fav, favs = [];
+        $('.custom-control-input').each(function () { // run through each of the checkboxes
+          fav = { id: $(this).attr('id'), value: $(this).prop('checked') };
+          favs.push(fav);
+        });
+        localStorage.setItem("ribbonListRSE", JSON.stringify(favs));
+
+        console.log(favs);
       });
-      localStorage.setItem("ribbonListRSE", JSON.stringify(favs));
 
-      console.log(favs);
-    });
+      // Parses through the created json file and reasigns values to the checkboxes
+      $(document).ready(function () {
+        var list = JSON.parse(localStorage.getItem('ribbonListRSE'));
+        if (!list.length) { return };
+        console.debug(list);
 
-    // Parses through the created json file and reasigns values to the checkboxes
-    $(document).ready(function() {
-      var list = JSON.parse(localStorage.getItem('ribbonListRSE'));
-      if (!list.length) {return};
-      console.debug(list);
+        for (var i = 0; i < list.length; i++) {
+          console.debug(list[i].value == 'on');
+          $('#' + list[i].id).prop('checked', list[i].value);
+        }
+      });
 
-      for (var i = 0; i < list.length; i++) {
-        console.debug(list[i].value == 'on');
-        $('#' + list[i].id ).prop('checked', list[i].value);
+      function clearAll() {
+        location.reload();
+        localStorage.removeItem('ribbonListRSE');
       }
-    });
+    </script>
 
-    function clearAll() {
-      location.reload();
-      localStorage.removeItem('ribbonListRSE');
-    }
-  </script>
-
-</div>
+  </div>
 </body>
+
 </html>
