--- a/privacy.html
+++ b/privacy.html
@@ -2,7 +2,7 @@
 <html lang="en-US">
 
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="Evan McCarthy aka. Cheeli99">
@@ -30,35 +30,38 @@
       </div>
     </header>
 
-  <main role="main" class="inner cover">
-    <h1 class="cover-heading">Privacy Policy</h1>
-    <h6>Last updated: December 29th, 2022</h6>
+    <main role="main" class="inner cover">
+      <h1 class="cover-heading">Privacy Policy</h1>
+      <h6>Last updated: December 29th, 2022</h6>
 
-    <br>
-    <p>No personal information is required to access or use the <b>Pokemon Ribbon Tracker</b> website. We do not collect any
-    any personal information or identification. We also do not use any ad tracking.</p>
+      <br>
+      <p>No personal information is required to access or use the <b>Pokemon Ribbon Tracker</b> website. We do not
+        collect any
+        any personal information or identification. We also do not use any ad tracking.</p>
 
-    <p>In order to save your progress, Pokemon Ribbon Tracker requires access to local storage.</p>
+      <p>In order to save your progress, Pokemon Ribbon Tracker requires access to local storage.</p>
 
-    <p></p>
+      <p></p>
 
-  </main><!-- End of main -->
+    </main><!-- End of main -->
 
     <!-- ======= Footer ======= -->
-  <footer class="mastfoot mt-auto">
-    <div class="inner">
-      <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a href="credits.html">Credits.</a>
-        Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
-      </p>
-    </div>
-  </footer>
+    <footer class="mastfoot mt-auto">
+      <div class="inner">
+        <p>All content & design © Pokémon Ribbon Tracker, 2022. <a href="privacy.html">Privacy Policy.</a> <a
+            href="credits.html">Credits.</a>
+          Pokémon images & names © 1995-2021 Nintendo/Creatures Inc./GAME FREAK inc. TM
+        </p>
+      </div>
+    </footer>
 
-  <!-- Vendor JS Files -->
+    <!-- Vendor JS Files -->
 
 
-  <!-- Main JS File -->
-  <script src="assets/js/main.js"></script>
+    <!-- Main JS File -->
+    <script src="assets/js/main.js"></script>
 
-</div>
+  </div>
 </body>
+
 </html>
